Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-14771

QDeclarativeView fails to show source if scene is set

    XMLWordPrintable

Details

    • 54ca4ebba8aa5c26516424a952f8e6d4ab919f6e

    Description

      The following code does not show the qml file's content.

      QGraphicsScene scene;
      
      QDeclarativeView *view = new QDeclarativeView;
      view->setScene(&scene); //<*** COMMENT to "fix"
      
      view->setSource(QUrl::fromLocalFile("main.qml"));
      view->show();
      

      The qml file is a simple rectangle.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jpetrell Joona Petrell
            mnaydenov Mihail Naydenov
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes