Make it possible to add your own graphics scene to QDeclarativeView

Task-number: QTBUG-14771
Reviewed-by: Martin Jones